refactor: 회원이 생성한 그룹 조회 API 변경 (#100)